# bsky-experiments

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker_install.sh  go.mod  go.sum  keys.json
.github/workflows/: container-pagerank-ghcr.yaml
cmd/backfill-pump/: main.go
cmd/backfill-test/: main.go
cmd/batch-indexer/: main.go
cmd/bin-to-bin/: main.go
cmd/bin-to-redis/: main.go
cmd/bin-to-text/: main.go
cmd/checkout/: main.go
cmd/consumer/: main.go
cmd/feed-generator/: main.go
cmd/feeddb/: main.go
cmd/get-users/: main.go
cmd/graph-builder/: main.go  main_test.go
cmd/graph-diff/: main.go
cmd/graphd/: main.go
cmd/graphfd/: main.go
cmd/image-processor/: main.go
cmd/indexer/: main.go
cmd/jazbot/: main.go
cmd/mention-counter/: main.go
cmd/merge/: main.go
cmd/plc/: main.go
cmd/pubsky/: main.go
cmd/querycheck/: main.go
cmd/redis-tester/: main.go  startup.sh
cmd/redis-to-redis/: main.go
cmd/search/: main.go
cmd/skypub/: main.go
cmd/text-to-sqlite/: main.go
cmd/thread-view/: main.go
cmd/translate/: main.go
data/: mention-counts.txt  reply-counts.txt
db/: analyze.sql  redis_bench_res.md
db/indexes/: clusters.sql  hotness.sql  posts.sql
db/postgres/: full_schema.sql
db/scripts/: hellthread_trigger.sql  sentiment_neg_trigger.sql  sentiment_pos_trigger.sql
db/scylla/: schema.cql
db/vacuums/: posts.sql
db/views/: hotness_view.sql
docker/: .Dockerfile.swp  .Dockerfile.un~  Dockerfile  docker-compose.yml
examples/local_graph/: graph.go  local_graph.go
examples/redis_graph/: redis_graph.go
examples/repo_checkout/: repo_checkout.go
frontend/: app.js  g6-app.js  graph-vis.html  sigma-app.js  sigma-vis.html  vis-g6.html
pkg/auth/: auth.go  staticprovider.go  storeprovider.go
pkg/backfill/: backfill.go  backfill_test.go  memstore.go  metrics.go
pkg/consumer/: backfill.go  bitmapper.go  consumer.go  metrics.go  post.go  tags.go  time.go  util.go
pkg/events/: consumer.go  event_callbacks.go  helpers.go  metrics.go  post.go  resolvers.go  worker.go
pkg/feed-generator/: auth.go  feed.go  feedgen.go
pkg/feeddb/: db.go  metrics.go
pkg/feeds/: helpers.go
pkg/graph/: binary.go  distance.go  graph.go  redis.go  redis_test.go  sqlite.go
pkg/graphd/: buf.gen.yaml  graph.go  graph_test.go  graphd.proto  persist.go
pkg/graphfd/: graph.go
pkg/jazbot/: challenge.go  command.go  consumer.go  jazbot.go  metrics.go  pds.go  points.go  resolver.go  search.go
pkg/layout/: layout-ts.go  layout.go
pkg/object-detection/: detection.go
pkg/persistedgraph/: redisgraph.go
pkg/plc/: plc.go
pkg/pubsky/: handlers.go  pubsky.go  resolver.go
pkg/querycheck/: check.go  dalibo.go  plan.go
pkg/rss/: client.go  post.go  rss.go
pkg/search/: authors.go  clusters.go  images.go  labels.go  posts.go  search.go  search_neo4j.go  sqlc.yaml
public/: docs.html
python/object-detection/: pyproject.toml
python/object-detection/bsky-object-detection/: app.py  models.py  object_detection.py  worker.py
python/object-detection/bskyobjectdetection/: app.py  logging.py
python/sentiment/: pyproject.toml
python/sentiment-batch/: pyproject.toml
python/sentiment-batch/bsky-sentiment-batch/: batch.py
python/sentiment/bsky-sentiment/: app.py  models.py  sentiment.py
rust/graphd/: Cargo.toml
rust/graphd/src/: graph.rs  handlers.rs  main.rs
rust/layout/: Cargo.toml
rust/layout/src/: main.rs
rust/pagerank-scylla/: Cargo.toml
rust/pagerank-scylla/src/: main.rs
specs/: feedgen.openapi.yaml  search.openapi.yaml
(+319 files in other folders)
