[package]
name = "graphd"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
axum = { version = "0.7.4", features = ["macros", "query"] }
axum-prometheus = "0.6.1"
csv = "1.3.0"
env_logger = "0.11.2"
log = "0.4.20"
metrics-process = "1.2.0"
route = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = "0.5.1"

[env]
AXUM_HTTP_REQUESTS_TOTAL = "rgraphd_requests_total"
AXUM_HTTP_REQUESTS_DURATION_SECONDS = "rgraphd_requests_duration_seconds"
AXUM_HTTP_REQUESTS_PENDING = "rgraphd_requests_pending"
AXUM_HTTP_RESPONSE_BODY_SIZE = "rgraphd_response_body_size"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[profile.release]
codegen-units = 1
