[package]
name = "layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forceatlas2 = "0.4.1"
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
