[package]
name = "pagerank-scylla"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
env_logger = "0.11.2"
hashbrown = "0.14.3"
log = "0.4.20"
scylla = {version = "0.12", features = ["ssl", "cloud", "chrono", "time", "num-bigint-03", "num-bigint-04", "bigdecimal-04"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
